--- a/journal/202104.md
+++ b/journal/202104.md
@@ -168,16 +168,15 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 { interviews about people }
 
-Community stats as of {date}:
+Community stats as of May 1:
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-- GitHub [dcrd](https://github.com/decred/dcrd) stars: {} (+{}), forks: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: 44,391 (+763)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 10,987 (+190)
+- [Matrix](https://chat.decred.org/) #general users: 434 (+27)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,566 (+157)
+- [Telegram](https://t.me/Decred) users: 2,645 (+51)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,500 (+40), views: 182K (+3K)
+- GitHub [dcrd](https://github.com/decred/dcrd) stars: 591 (+2), forks: 254 (-1)
 
 ## Governance
 
