--- a/journal/202104.md
+++ b/journal/202104.md
@@ -182,9 +182,7 @@ See the [April report](https://decredcommunity.github.io/social-media-stats/post
 
 ## Governance
 
-In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of ${n.nn}, the USD figure billed for past work is ${n}K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13).
-
-{ high level recap of decision-making activity and most important events }
+In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's daily average DCR/USD rate of $198.60, this is $2.17M received and $195K spent. At March's average daily rate of $161.01, the USD figure billed for past work is $158K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13). { spent/billed numbers look to low, please check }
 
 - A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include email-free accounts, extra metadata for proposals, and proposal author updates.
 - The Video production phase 3 [proposal](https://proposals-archive.decred.org/proposals/95a1409) was approved with 98% approval and voter participation of 40%.
@@ -192,7 +190,7 @@ In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
-Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month's proposals.
+Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042/) has more details on the month's proposals.
 
 ## Network
 
