add some rel ext

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -330,6 +330,10 @@ In April DCR was trading between USD 169.5-243.7 / BTC 0.03136-0.00402. The aver
 
 { governance, funding, chain forks, community splits }
 
+The Yearn Finance community have been discussing [YIP-61](https://gov.yearn.finance/t/yip-61-governance-2-0/10460/25) "Governance 2.0", which extends the multisig arrangement put in place temporarily by YIP-41, and [approving](https://snapshot.org/#/ybaby.eth/proposal/QmSMyYeKrRpnA7Xn56o2NtbCUzxmhzCupL7LxMA1reXxq4) it with 99.97% yes votes. This proposal also delegates certain powers to a set of yearn contributor teams ("yTeams"), and "clarifies" the role of YFI holders as being primarily about delegating powers to these teams and approving YIPs.
+
+The NFT sub-community is crowdfunding its own new media platform ([NFTs WTF](https://nfts.wtf)), via the mechanism of selling 100 NFTs that confer voting rights in a DAO that will support the platform. It is interesting to note that the [post](https://nfts.wtf/crowdfunding-the-worlds-first-d-zine/) announcing the first phase of the crowdsale, in which 51 of the 100 controlling tokens were sold, only 3 were sold to Venture Capitalists, and as individuals not representatives of their organizations.
+
 { DEX }
 
 { relevant exchanges and websites }
