--- a/journal/202104.md
+++ b/journal/202104.md
@@ -204,9 +204,9 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/
 
-**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kmv7w940-ko7df59q&scale=linear&bin=window&axis=time&visibility=true-false) varied between 163.49-204.1 DCR, with 30-day [average](https://dcrstats.com/) at 185.83 DCR (+7.83).
+**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kmvlwq6x-ko7rp8zy&axis=time&visibility=true-false&mode=stepped) varied between 163.49-204.1 DCR, with 30-day [average](https://dcrstats.com/) at 185.83 DCR (+7.83).
 
-The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kmvltoqc-ko7rp3w3&scale=linear&bin=block&axis=time&visibility=true-false) was 7.1-7.5 million DCR, meaning that 55.4-58.4% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kmvmb2ag-ko7s6soq&scale=linear&bin=block&axis=time&visibility=true-false) in proof-of-stake.
+The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) was 7.1-7.5 million DCR, meaning that 55.4-58.4% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 { recap of ticket price action if it was interesting }
 
