--- a/journal/202104.md
+++ b/journal/202104.md
@@ -200,7 +200,7 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 1: Poolin 37%, Antpool 28%\*, F2Pool 19%, BTC.com 1.7%, Luxor 1.6%, Easy2Mine 1.3%, UUPool 0.2%, Coinmine 0.1%, unknown 11%. \*Antpool's address was not identified by our [data source](https://miningpoolstats.stream/decred) but it is assumed based on exact match with pool's reported hashrate.
 
 https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/
 
