Net node versions

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -212,7 +212,7 @@ The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&
 
 **Nodes**: Throughout April there were around ~210 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z  n%, ... } {Do we have this data ?}
+Node versions as of May 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (257 total, dcrd only): v1.6.0 - 26%, v1.6.2 - 24%, v1.6.1 - 22%, v1.5.2 - 7%,, v1.5.1 - 7%, v1.7 dev builds - 7%, v1.6 dev builds - 4%, v1.5.0 - 2%.
 
 { maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
