--- a/journal/202104.md
+++ b/journal/202104.md
@@ -214,7 +214,7 @@ The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&
 
 Node versions as of May 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (257 total, dcrd only): v1.6.0 - 26%, v1.6.2 - 24%, v1.6.1 - 22%, v1.5.2 - 7%,, v1.5.1 - 7%, v1.7 dev builds - 7%, v1.6 dev builds - 4%, v1.5.0 - 2%.
 
-{ maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
+The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=kmvlwq6x-ko7rp8zy&bin=day&axis=time&visibility=true-true-true) has slightly declined from 44% to 42%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=kguk0rxu-koc4hs00&bin=day&axis=time) varied between 150-300K DCR.
 
 { maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
 
