--- a/journal/202104.md
+++ b/journal/202104.md
@@ -202,7 +202,7 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 1: Poolin 37%, Antpool 28%\*, F2Pool 19%, BTC.com 1.7%, Luxor 1.6%, Easy2Mine 1.3%, UUPool 0.2%, Coinmine 0.1%, unknown 11%. \*Antpool's address was not identified by our [data source](https://miningpoolstats.stream/decred) but it is assumed based on exact match with pool's reported hashrate.
 
-https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/
+A sharp hashrate drop around Apr 15-20 may have been due to a major [power outage](https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/) in China.
 
 **Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kmvlwq6x-ko7rp8zy&axis=time&visibility=true-false&mode=stepped) varied between 163.5-204.1 DCR, with 30-day [average](https://dcrstats.com/) at 185.8 DCR (+7.8).
 
