--- a/journal/202104.md
+++ b/journal/202104.md
@@ -216,7 +216,7 @@ Node versions as of May 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=kmvlwq6x-ko7rp8zy&bin=day&axis=time&visibility=true-true-true) has slightly declined from 44% to 42%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=kguk0rxu-koc4hs00&bin=day&axis=time) varied between 150-300K DCR.
 
-{ maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+Bison's presence has been spotted on [LN](https://ln-map.jholdstock.uk/) as a node called "El Gran Bisonte ⚡🐂⚡".
 
 { any interesting analysis or events in the network }
 
