--- a/journal/202104.md
+++ b/journal/202104.md
@@ -216,15 +216,13 @@ Bison's presence has been spotted on [LN](https://ln-map.jholdstock.uk/) as a no
 
 ## Integrations
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
+Welcome the new [vspd](https://github.com/decred/vspd) server from [stakey.com](https://vspd.stakey.com/) with 0.3% fee - lowest on the market as of writing. Its legacy VSP server has been removed from the [listing](https://decred.org/vsp/) but is still operational with 80 live tickets as of May 7.
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
-
-{ check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
-
-investigate https://twitter.com/baapapp/status/1376975012830326786
+[Baap ATM](https://baap.app/) [tweeted](https://twitter.com/baapapp/status/1376975012830326786) that their ATMs and agents allow [DCR purchasing](https://baap.app/buy-decred-coin/) for CAD in some locations in Canada.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+
+Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat to help us collect accurate information about Decred ecosystem.
 
 ## Adoption
 
