--- a/journal/202104.md
+++ b/journal/202104.md
@@ -28,7 +28,9 @@ Contents: { sync }
 
 ## Upgrade reminder
 
-{}
+https://github.com/decred/decred-binaries/releases/tag/v1.6.2
+
+{ or v1.6.3? }
 
 ## Development
 
@@ -55,7 +57,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-- initial [DEX integration](https://github.com/decred/decrediton/pull/3356) { how does it work, i.e. does it run a one more daemon? is there a BTC wallet? UI shots? }
+- initial [DEX integration](https://github.com/decred/decrediton/pull/3356) { how does it work, i.e. does it run a one more daemon? is there a BTC wallet and how non-DCR assets are handled? UI shots? }
 - a form for [funding](https://github.com/decred/decrediton/pull/3426) the DEX account from the registration view
 - allow to use an [existing](https://github.com/decred/decrediton/pull/3438) wallet account for the DEX instead of making a new one
 - added [QR code](https://github.com/decred/decrediton/pull/3112) generation to export active tickets (to be used with the Decred Address Scanner app)
@@ -184,6 +186,10 @@ See the [April report](https://decredcommunity.github.io/social-media-stats/post
 
 In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's daily average DCR/USD rate of $198.60, this is $2.17M received and $195K spent. At March's average daily rate of $161.01, the USD figure billed for past work is $158K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13).
 
+The consensus vote to enable the new treasury has [passed](https://explorer.dcrdata.org/agenda/treasury) with a 99.9% approval and 83% voter participation. This is the second highest voter turnout in Decred's history after the [stake difficulty](https://dcrdata.decred.org/agenda/sdiffalgorithm) vote in 2017 (88%).
+
+Proposal updates:
+
 - A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include another upgrade to the plugin architecture, user API overhaul, email-free accounts, extra metadata for proposals, proposal life cycles, and proposal author updates.
 - The video production phase 3 [proposal](https://proposals-archive.decred.org/proposals/95a1409) was approved with 98% approval and voter participation of 40%.
 - The Design domain [proposal](https://proposals-archive.decred.org/proposals/76eba5a) for remainder of 2021 was approved with 97% approval and voter participation of 28%.
@@ -246,7 +252,7 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- was this an event? https://twitter.com/addcade/status/1384940051222695936
 
 Upcoming:
 
@@ -286,13 +292,13 @@ Translations:
 
 Other non-English content:
 
-- {}
+- @Dominic talked to Mable Jiang on 51% Podcast episode 20, titled "On Decred's Hybrid Consensus and Collective Wisdom", hosted by Multicoin Capital ([apple](https://podcasts.apple.com/cn/podcast/51-with-mable-jiang-presented-by-multicoin-capital/id1540917284?l=en&i=1000515571194), [simplecast.com](https://51-with-mable-jiang-presented-by-multicoin-capital.simplecast.com/episodes/ep20-cn-dt-decred)).
 
 ## Community Discussions
 
 Comm systems news:
 
-- {}
+- new announcements room on Matrix https://chat.decred.org/#/room/#dcr:decred.org
 
 { selected discussed topics, as bullet list or one paragraph per topic }
 
@@ -302,7 +308,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- @lukebp clears up what a [DAO](https://twitter.com/lukebp_/status/1378381506947784706) is
 
 ## Markets
 
