--- a/journal/202104.md
+++ b/journal/202104.md
@@ -252,13 +252,7 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- was this an event? https://twitter.com/addcade/status/1384940051222695936
-
-Upcoming:
-
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- Apr 21 - [Blockchain Land](https://blockchainland.talent-republic.tv/) - Internet. @adcade talked about "[Opinions](https://blockchainland.talent-republic.tv/on-demand/que-opinar-sobre-las-criptomonedas/) on cryptocurrencies" and the [future](https://blockchainland.talent-republic.tv/on-demand/blockchains-futuro-escalabilidad-u-oportunismo/) of crypto as part of Decred participation in Blockchain Land by Talent Land. The panels were streamed in [virtual spaces](https://es.cointelegraph.com/news/first-massive-spanish-speaking-blockchain-event-created-by-decentraland-and-cryptovoxels) Decentraland and Cryptovoxels.
 
 ## Media
 
