--- a/journal/202104.md
+++ b/journal/202104.md
@@ -282,7 +282,8 @@ Art/fun:
 
 Translations:
 
-- {}
+- Decred Blockchain Analysis - Part 2 PoW wow - [in Spanish](https://medium.com/decred-es/an%C3%A1lisis-de-la-blockchain-de-decred-pt-2-pow-wow-376aab0be23c) by @francov\_
+- Decred Journal March 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you all!
 
 Other non-English content:
 
