--- a/journal/202104.md
+++ b/journal/202104.md
@@ -264,11 +264,17 @@ Selected articles:
 
 Videos:
 
-- {}
+- Luke Powell interview Decred in Depth (live) by @elima\_iii ([youtube](https://www.youtube.com/watch?v=J6IAjmwkki0))
+- Decred Society interview Decred in Depth (live) @elima\_iii ([youtube](https://www.youtube.com/watch?v=WOVUvzsp3Eo))
+- Decred's proposal platform Politeia: The decision-making force behind the ~$125M Decred DAO by @Exitus ([youtube](https://www.youtube.com/watch?v=dfpUgwXBUmM))
+- The evolution of money - Decred fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=1qadfuFuqzs))
+- Interoperability for digital cash by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=iBN0ZzlEKMA))
+- Decred Price Analysis - 27th April 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=NfSp5IjPtAI))
 
 Audio:
 
-- {}
+- Rough Consensus 18: Bull Market Blues - Checkmate, Permabull Nino & Mister Black ([libsyn](https://roughconsensus.libsyn.com/episode-18-bull-market-blues), [spotify](https://open.spotify.com/episode/0E7k86gme05YINpdBlVPqy))
+- Keyword: Crypto Podcast with @lukebp ([youtube](https://www.youtube.com/watch?v=pRJ1zJFVoFo), [keywordcrypto.com](https://www.keywordcrypto.com/luke-p-from-decred/))
 
 Art/fun:
 
