--- a/journal/202104.md
+++ b/journal/202104.md
@@ -18,7 +18,7 @@ Contents: { sync }
 - [People](#people)
 - [Governance](#governance)
 - [Network](#network)
-- [Integrations](#integrations)
+- [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
 - [Events](#events)
 - [Media](#media)
@@ -222,7 +222,7 @@ Bison's presence has been spotted on [LN](https://ln-map.jholdstock.uk/) as a no
 
 { any interesting analysis or events in the network }
 
-## Integrations
+## Ecosystem
 
 Welcome the new [vspd](https://github.com/decred/vspd) server from [stakey.com](https://vspd.stakey.com/) with 0.3% fee - lowest on the market as of writing. Its legacy VSP server has been removed from the [listing](https://decred.org/vsp/) but is still operational with 80 live tickets as of May 7.
 
