add some from reddit

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -45,6 +45,8 @@ The work reported below has the "merged to master" status unless noted otherwise
 - added [median time](https://github.com/decred/dcrd/pull/2638) over the last 11 blocks to verbose `getblock` and `getblockheader` results (used by DCRDEX)
 - allow to specify interfaces to listen by [names](https://github.com/decred/dcrd/pull/2623) in addition to exact IP addresses
 
+Initial chain sync [comparison](https://www.reddit.com/r/decred/comments/mi4ezt/initial_chain_sync_comparison_between_dcrd_v140/) between dcrd v1.4.0 and latest shows how all the improvements have accumulated into a big difference in performance. Despite there now being ~230K more blocks, the latest version takes almost the same time to sync while allocating way less memory.
+
 <a id="dcrwallet" />
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
@@ -299,7 +301,8 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- {}
+- [r/decred](https://www.reddit.com/r/decred/new/) now has weekly Trader Talk Thursdays and Many Musings Mondays to host content that would otherwise be removed as duplicate price talks or off-topic
+- a marketing idea to run Decred-funded [mail service](https://www.reddit.com/r/decred/comments/n11zwu/decredmail_a_marketing_idea/)
 
 Selected Twitter discussions:
 
