Outreach thanks reddit folks

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -168,8 +168,6 @@ An [update](https://www.reddit.com/r/decred/comments/n9i8z2/dcrdex_updates_v02_r
 
 ## People
 
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
 { interviews about people }
 
 Community stats as of May 1:
@@ -235,6 +233,8 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat to help us collect accurate information about Decred ecosystem.
 
 ## Outreach
+
+Thanks to all Decred supporters on Reddit for spreading awareness in public places like r/CryptoCurrency. Recent examples: [one](https://www.reddit.com/r/CryptoCurrency/comments/m03ay0/what_are_your_favorite_top_100_coins_to_stake_and/), [two](https://www.reddit.com/r/CryptoCurrency/comments/m2cza0/lets_talk_about_dexs_and_do_we_really_need_so_many/), [three](https://www.reddit.com/r/CryptoCurrency/comments/m895oa/which_is_your_favorite_dao/), [four](https://www.reddit.com/r/CryptoCurrency/comments/madahw/you_can_buy_5_coins_now_anf_only_access_them/), [five](https://www.reddit.com/r/CryptoCurrency/comments/mcqzk7/too_many_post_your_undervalued_coins_posts_here/), [six](https://www.reddit.com/r/CryptoCurrency/comments/msifo2/one_crypto_for_the_rest_of_your_life/).
 
 Monde PR's achievements for April:
 
