--- a/journal/202104.md
+++ b/journal/202104.md
@@ -210,7 +210,7 @@ A sharp hashrate drop around Apr 15-20 may have been due to a major [power outag
 
 The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) was 7.11-7.51 million DCR, meaning that 55.4-58.5% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-**VSP**: On May 1, 7.1K (+0.5K) live tickets were held by vspd servers and 2.2K by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. 15 legacy and 13 new VSPs together 23% of the ticket pool. The 2 recently delisted legacy VSPs held 105 live tickets as of May 7.
+**VSP**: On May 1, 7.1K (+0.5K) live tickets were held by vspd servers and 2.2K (-1.8K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. 15 legacy and 13 new VSPs together held 23% of the ticket pool. The 2 recently delisted legacy VSPs held 105 live tickets.
 
 **Nodes**: Throughout April there were around ~210 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
