--- a/journal/202104.md
+++ b/journal/202104.md
@@ -43,7 +43,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 - codebase [converted](https://github.com/decred/dcrd/pull/2625) to use the new `stdaddr` package. Code that deals with addresses now supports different script versions and is one step closer to being able to cleanly introduce new scripting language versions. As common for large changes, to make review easier this one was split into a series of individual commits such that everything builds and passes all tests each step of the way.
 - introduced [UTXO database](https://github.com/decred/dcrd/pull/2632). It paves the way for a specialized UTXO database implementation that can be made more efficient in terms of both processing time and memory usage.
 - added [median time](https://github.com/decred/dcrd/pull/2638) over the last 11 blocks to verbose `getblock` and `getblockheader` results (used by DCRDEX)
-- allow to specify interfaces to listen by [names](https://github.com/decred/dcrd/pull/2623) in addition to exact IP addresses
+- allow to specify interfaces to listen by their [names](https://github.com/decred/dcrd/pull/2623) in addition to exact IP addresses
 
 Initial chain sync [comparison](https://www.reddit.com/r/decred/comments/mi4ezt/initial_chain_sync_comparison_between_dcrd_v140/) between dcrd v1.4.0 and latest shows how all the improvements have accumulated into a big difference in performance. Despite there now being ~230K more blocks, the latest version takes almost the same time to sync while allocating way less memory.
 
@@ -71,7 +71,7 @@ Initial chain sync [comparison](https://www.reddit.com/r/decred/comments/mi4ezt/
 - many smaller design tweaks
 - switched to a strict Protobuf generation without `eval()` and restricted to only access external servers via `https` in production builds using the [CSP header](https://github.com/decred/decrediton/pull/3366)
 - refactoring of state management, separation of concerns, dependency upgrades
-- expanded test coverage
+- increased test coverage
 - ~24 bug fixes
 
 Release [v1.6.3](https://github.com/decred/decrediton/tree/release-v1.6%2B) is being prepared.
@@ -81,15 +81,15 @@ Release [v1.6.3](https://github.com/decred/decrediton/tree/release-v1.6%2B) is b
 **[Politeia](https://github.com/decred/politeia)**
 
 - list [proposals](https://github.com/decred/politeiagui/pull/2340) from [proposals-archive.decred.org](https://proposals-archive.decred.org/) on the new version
-- [verify](https://github.com/decred/politeia/pull/1377) comment and vote bundles in the `politeiaverify` tool
+- [verify](https://github.com/decred/politeia/pull/1377) comment and vote bundles with the new `politeiaverify` tool
 - list registration fee in the [history](https://github.com/decred/politeiagui/pull/2322) of purchases
 - ~24 bugs discovered in the new version have been fixed
 
-One notable change is the addition of [timestamps](https://github.com/decred/politeia/pull/1395) to cast votes. In Git backend precise timestamps were not stored to improve voter privacy and it was only possible to determine if a vote was cast within a ~60 min period. In tstore backend timestamp is already being recorded by Trillian and this cannot be disabled without writing a custom Trillian implementation. Because vote timestamp is now public data anyway, adding it directly to the vote structure allows dcrdata to obtain it much easier (to build its vote [graphs](https://dcrdata.decred.org/proposal/video-content-production-for-decred-phase-3)). But it also means a bit lower privacy for people casting all their votes at once. People who want to protect their privacy are strongly advised to use `politeiavoter`'s [trickling feature](https://github.com/decred/politeia/blob/master/politeiawww/cmd/politeiavoter/README.md#privacy-considerations).
+One notable change is the addition of [timestamps](https://github.com/decred/politeia/pull/1395) to cast votes. In Git backend precise timestamps were not stored to improve voter privacy, and as a result it was only possible to determine if a vote was cast within a ~60 min period. In tstore backend timestamp is already being recorded by Trillian and this cannot be disabled without writing a custom Trillian implementation. Because vote timestamp is now public data anyway, adding it directly to the vote structure allows dcrdata to obtain it much easier (e.g. to build its vote [graphs](https://dcrdata.decred.org/proposal/video-content-production-for-decred-phase-3)). But it also means a bit lower privacy for people casting all their votes at once. People who want to protect their privacy are strongly advised to use `politeiavoter`'s [trickling feature](https://github.com/decred/politeia/blob/master/politeiawww/cmd/politeiavoter/README.md#privacy-considerations).
 
 Politeia v1.0.0 has been released including the new tstore backend, v2 API, new plugin architecture and 5 plugins. Read the [release notes](https://github.com/decred/politeia/releases/tag/v1.0.0) for full details on each feature. The new version has been deployed at [proposals.decred.org](https://proposals.decred.org/).
 
-Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn about the development roadmap and budget.
+Learn about future development roadmap and budget in the new [proposal](https://proposals.decred.org/record/91cfcc8) (vote started May 11).
 
 <a id="dcrpool" />
 
@@ -123,7 +123,7 @@ An [update](https://www.reddit.com/r/decred/comments/n9i8z2/dcrdex_updates_v02_r
 
 - v0.2 release has finished beta testing, expect binaries and server update soon
 - v0.2 brings many improvements, including support for the upcoming Decrediton integration
-- SPV wallet support for both Decred and Bitcoin are planned in one or more next releases this year
+- SPV wallet support for both Decred and Bitcoin are planned in next releases this year
 - ETH development is in progress and is expected to release toward the end of Phase 2
 - for more exciting features read the [update](https://www.reddit.com/r/decred/comments/n9i8z2/dcrdex_updates_v02_release_decrediton_integration/) and the linked release notes
 
@@ -163,7 +163,7 @@ An [update](https://www.reddit.com/r/decred/comments/n9i8z2/dcrdex_updates_v02_r
 
 **[docs](https://github.com/decred/dcrdocs)**
 
-- [dark mode](https://github.com/decred/dcrdocs/pull/1161)
+- [dark mode](https://github.com/decred/dcrdocs/pull/1161)!
 - [Migrations](https://github.com/decred/dcrdocs/pull/1163) page for the upcoming Decrediton v1.6.3
 
 ## People
