--- a/journal/202104.md
+++ b/journal/202104.md
@@ -180,21 +180,21 @@ Community stats as of May 1:
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,500 (+40), views: 182K (+3K)
 - GitHub [dcrd](https://github.com/decred/dcrd) stars: 591 (+2), forks: 254 (-1)
 
-See the [April report](https://decredcommunity.github.io/social-media-stats/posts/20210506.1) for notable changes in stats tracked for Decred-related social media accounts.
+See the [April SM report](https://decredcommunity.github.io/social-media-stats/posts/20210506.1) for notable social media stats updates.
 
 ## Governance
 
-In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's daily average DCR/USD rate of $198.60, this is $2.17M received and $195K spent. At March's average daily rate of $161.01, the USD figure billed for past work is $158K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13).
+In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's average DCR rate of $198.60, this is $2.17M received and $195K spent. With March's average rate $161.01, the USD billed for past work is $158K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13).
 
 The consensus vote to enable the new treasury has [passed](https://explorer.dcrdata.org/agenda/treasury) with a 99.9% approval and 83% voter participation. This is the second highest voter turnout in Decred's history after the [stake difficulty](https://dcrdata.decred.org/agenda/sdiffalgorithm) vote in 2017 (88%).
 
-Proposal updates:
+Proposal news:
 
-- A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include another upgrade to the plugin architecture, user API overhaul, email-free accounts, extra metadata for proposals, proposal life cycles, and proposal author updates.
+- A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include another upgrade to the plugin architecture, user API overhaul, email-free accounts, extra metadata for proposals, proposal life cycles, and proposal author updates. Vote started on May 11.
 - The video production phase 3 [proposal](https://proposals-archive.decred.org/proposals/95a1409) was approved with 98% approval and voter participation of 40%.
 - The Design domain [proposal](https://proposals-archive.decred.org/proposals/76eba5a) for remainder of 2021 was approved with 97% approval and voter participation of 28%.
 
-Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042/) has more details on the month's proposals.
+See Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042/) for more details on the month's proposals.
 
 ## Network
 
