--- a/journal/202104.md
+++ b/journal/202104.md
@@ -200,21 +200,19 @@ See Politeia Digest [issue 42](https://blockcommons.red/politeia-digest/issue042
 
 **Hashrate**: April's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) opened at ~464 Ph/s and closed ~429 Ph/s, bottoming at 219 Ph/s and peaking at 587 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 1: Poolin 35%, Antpool 28%, F2Pool 18%, Easy2Mine 4%, BTC.com 1.8%, Luxor 1.3%, UUPool 0.09%, Coinmine 0.06%, Huobipool 0.02%, other 12%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 1: Poolin 35%, Antpool 28%, F2Pool 18%, Easy2Mine 4%, BTC.com 1.8%, Luxor 1.3%, UUPool 0.09%, Coinmine 0.06%, Huobipool 0.02%, other 12%. This time the reported hashrate closely matched the distribution of 1,000 actually [mined blocks](https://miningpoolstats.stream/decred).
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 1: Poolin 37%, Antpool 28%\*, F2Pool 19%, BTC.com 1.7%, Luxor 1.6%, Easy2Mine 1.3%, UUPool 0.2%, Coinmine 0.1%, unknown 11%. \*Antpool's address was not identified by our [data source](https://miningpoolstats.stream/decred) but it is assumed based on exact match with pool's reported hashrate.
-
-A sharp hashrate drop around Apr 15-20 may have been due to a major [power outage](https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/) in China.
+A sharp hashrate drop around Apr 15-20 have been attributed to a major [power outage](https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/) in China.
 
 **Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kmvlwq6x-ko7rp8zy&axis=time&visibility=true-false&mode=stepped) varied between 163.5-204.1 DCR, with 30-day [average](https://dcrstats.com/) at 185.8 DCR (+7.8).
 
 The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) was 7.11-7.51 million DCR, meaning that 55.4-58.5% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-**VSP**: On May 1, 7.1K (+0.5K) live tickets were held by vspd servers and 2.2K (-1.8K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. 15 legacy and 13 new VSPs together held 23% of the ticket pool. The 2 recently delisted legacy VSPs held 105 live tickets.
+**VSP**: On May 1, 7.1K (+0.5K) live tickets were managed by vspd servers and 2.2K (-1.8K) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Together 15 legacy and 13 new VSPs managed 23% of the ticket pool. The 2 recently delisted legacy VSPs managed 105 live tickets.
 
 **Nodes**: Throughout April there were around ~210 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of May 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (257 total, dcrd only): v1.6.0 - 26%, v1.6.2 - 24%, v1.6.1 - 22%, v1.5.2 - 7%,, v1.5.1 - 7%, v1.7 dev builds - 7%, v1.6 dev builds - 4%, v1.5.0 - 2%.
+Node versions as of May 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (257 total, dcrd only): v1.6.0 - 26%, v1.6.2 - 24%, v1.6.1 - 22%, v1.5.2 - 7%, v1.5.1 - 7%, v1.7 dev builds - 7%, v1.6 dev builds - 4%, v1.5.0 - 2%.
 
 The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=kmvlwq6x-ko7rp8zy&bin=day&axis=time&visibility=true-true-true) has slightly declined from 44% to 42%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=kguk0rxu-koc4hs00&bin=day&axis=time) varied between 150-300K DCR.
 
