Media polish and add links to relevant sections

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -90,7 +90,9 @@ One notable change is the addition of [timestamps](https://github.com/decred/pol
 
 Politeia v1.0.0 has been released including the new tstore backend, v2 API, new plugin architecture and 5 plugins. Read the [release notes](https://github.com/decred/politeia/releases/tag/v1.0.0) for full details on each feature. The new version has been deployed at [proposals.decred.org](https://proposals.decred.org/).
 
-Learn about future development roadmap and budget in the new [proposal](https://proposals.decred.org/record/91cfcc8) (vote started May 11).
+@lukebp talked about Politeia development, latest releases and future directions on Decred in Depth [podcast](https://www.youtube.com/watch?v=J6IAjmwkki0) (starts at 12 min).
+
+Politeia's own first [proposal](https://proposals.decred.org/record/91cfcc8) is now live (and voting), formalizing its development roadmap and budget until the end of 2021.
 
 <a id="dcrpool" />
 
@@ -169,7 +171,7 @@ An [update](https://www.reddit.com/r/decred/comments/n9i8z2/dcrdex_updates_v02_r
 
 ## People
 
-{ interviews about people }
+Get to know Decred contributors in the new interviews with [@lukebp](https://www.youtube.com/watch?v=J6IAjmwkki0) and [@phoenixgreen](https://www.youtube.com/watch?v=WOVUvzsp3Eo).
 
 Community stats as of May 1:
 
@@ -258,7 +260,7 @@ Selected articles:
 
 - Decred makes consensus change to further decentralize $128M treasury ([banklesstimes.com](https://www.banklesstimes.com/2021/04/12/decred-makes-consensus-change-to-further-decentralize-128m-treasury/))
 - What is Decred and DCR? by Ivan on Tech ([ivanontech.com](https://academy.ivanontech.com/blog/what-is-decred-and-dcr))
-- Q1'21 Currency Sector Review by Mira Christanto ([messari.io](https://messari.io/article/q1-21-currency-sector-review)) - Messari [tweeted](https://twitter.com/MessariCrypto/status/1381654632515174402) that DCR is second biggest mover after DOGE in Q1 2021
+- Q1'21 currency sector review by Mira Christanto ([messari.io](https://messari.io/article/q1-21-currency-sector-review)) - Messari [tweeted](https://twitter.com/MessariCrypto/status/1381654632515174402) that DCR is second biggest mover after DOGE in Q1 2021
 
 Videos:
 
@@ -273,7 +275,7 @@ Videos:
 
 Audio:
 
-- Rough Consensus 18: Bull Market Blues - Checkmate, Permabull Nino & Mister Black ([libsyn](https://roughconsensus.libsyn.com/episode-18-bull-market-blues), [spotify](https://open.spotify.com/episode/0E7k86gme05YINpdBlVPqy))
+- Rough Consensus 18: Bull market blues - Checkmate, Permabull Nino & Mister Black ([libsyn](https://roughconsensus.libsyn.com/episode-18-bull-market-blues), [spotify](https://open.spotify.com/episode/0E7k86gme05YINpdBlVPqy))
 - Keyword: Crypto Podcast with @lukebp ([youtube](https://www.youtube.com/watch?v=pRJ1zJFVoFo), [keywordcrypto.com](https://www.keywordcrypto.com/luke-p-from-decred/))
 
 Translations:
@@ -283,7 +285,7 @@ Translations:
 
 Other non-English content:
 
-- @Dominic talked to Mable Jiang on 51% Podcast episode 20, titled "On Decred's Hybrid Consensus and Collective Wisdom", hosted by Multicoin Capital ([apple](https://podcasts.apple.com/cn/podcast/51-with-mable-jiang-presented-by-multicoin-capital/id1540917284?l=en&i=1000515571194), [simplecast.com](https://51-with-mable-jiang-presented-by-multicoin-capital.simplecast.com/episodes/ep20-cn-dt-decred)).
+- @Dominic talked to Mable Jiang on 51% Podcast episode 20 titled "On Decred's Hybrid Consensus and Collective Wisdom", hosted by Multicoin Capital ([apple](https://podcasts.apple.com/cn/podcast/51-with-mable-jiang-presented-by-multicoin-capital/id1540917284?l=en&i=1000515571194), [simplecast.com](https://51-with-mable-jiang-presented-by-multicoin-capital.simplecast.com/episodes/ep20-cn-dt-decred))
 
 ## Community Discussions
 
