CoDi expand quote

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -305,7 +305,11 @@ Selected Twitter discussions:
 - @lukebp clears up what a [DAO](https://twitter.com/lukebp_/status/1378381506947784706) is
 - @overthrowy shared his Decred [investment deck](https://twitter.com/overthrowy/status/1381097293122740225)
 
-> For people who believe in collaboration, who aspire o pursue the common good, and who are willing to align themselves behind the general will of the decentralized voter collective, Decred may be the right choice. ([@overthrowy](https://twitter.com/overthrowy/status/1381104927108296707))
+> For people who believe that "the market" makes the best decisions, Bitcoin may be the right choice. During any contentious change, the network may split in two or more forks that will compete (fight) for financial and social support of PoW miners, developers, investors and exchanges.
+> 
+> For people who believe in collaboration, who aspire to pursue the common good, and who are willing to align themselves behind the general will of the decentralized voter collective, Decred may be the right choice.
+> 
+> Bitcoin and Decred are different social contracts. _They can coexist._ ([@overthrowy](https://twitter.com/overthrowy/status/1381104927108296707))
 
 ## Markets
 
